test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/extra_credit/postfix_decr_void.plx
#  Can't apply postfix ++/-- to void lvalue
extrn x: *any;

pub fn main(none) i32 {
    ++(x[])--
    return false
}
